Bug 7322 - Unexpected surface type 4096
Summary: Unexpected surface type 4096
Status: RESOLVED FIXED
Alias: None
Product: cairo
Classification: Unclassified
Component: general (show other bugs)
Version: 1.1.9
Hardware: x86 (IA32) Linux (All)
: high normal
Assignee: Carl Worth
QA Contact: cairo-bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-06-25 07:15 UTC by Torsten Schönfeld
Modified: 2006-07-10 07:26 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
First example, with an image surface (454 bytes, text/plain)
2006-06-25 07:15 UTC, Torsten Schönfeld
Details
Second example, with a postscript surface (485 bytes, text/plain)
2006-06-25 07:16 UTC, Torsten Schönfeld
Details

Description Torsten Schönfeld 2006-06-25 07:15:15 UTC
The test suite for the Perl bindings (semi-) recently started failing with
errors that involved the surface type 4096.  I digged aroung the relevant code
paths a bit but wasn't able to find out why that type occurs and whether it is
intended behavior.  Attached are two small C programs that both yield surfaces
for which cairo_surface_get_type returns 4096.

What does this surface type stand for?  How should it be handled?
Comment 1 Torsten Schönfeld 2006-06-25 07:15:44 UTC
Created attachment 6039 [details]
First example, with an image surface
Comment 2 Torsten Schönfeld 2006-06-25 07:16:00 UTC
Created attachment 6040 [details]
Second example, with a postscript surface
Comment 3 Behdad Esfahbod 2006-07-10 07:26:55 UTC
Fixed now in defa23206cfa83ad4460a868f78289ba7f7c1c53


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.